<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui00"
    tools:context=".filecomp">


    <EditText
        android:id="@+id/editText5"
        android:layout_width="288dp"
        android:layout_height="73dp"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="@drawable/ss"
        android:hint="@string/spot_address"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#221E1E"
        android:textColorHighlight="#100E0E"
        android:textColorHint="#190F0F"
        android:textColorLink="#150F0F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:textColor="#1B1818"
        tools:textColorHint="#221D1D" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:alpha="0.8"
        android:background="@drawable/imgbut"
        android:src="@drawable/fil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:background="@drawable/r"
        android:hint="@string/registrar_mobile_number"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#1E1D1D"
        android:textColorHighlight="#251C1C"
        android:textColorHint="#131111"
        android:textColorLink="#0C0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0"
        tools:inputType="number"
        tools:textColorHint="#1C1818" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="288dp"
        android:layout_height="73dp"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="@drawable/ss"
        android:hint="@string/describe_crime_activity"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#090707"
        android:textColorHighlight="#0B0A0A"
        android:textColorHint="#2C2020"
        android:textColorLink="#130B0B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        tools:textColorHint="#151212" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:alpha="0.7"
        android:background="@drawable/r"
        android:hint="@string/aadhaar"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#191515"
        android:textColorHighlight="#131010"
        android:textColorHint="#130404"
        android:textColorLink="#170909"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0"
        tools:textColorHint="#221B1B" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="100dp"
        android:alpha="0.7"
        android:background="@drawable/r"
        android:hint="@string/no_of_criminals"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="#1C1515"
        android:textColorHighlight="#120E0E"
        android:textColorHint="#100404"
        android:textColorLink="#220909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0"
        tools:inputType="number"
        tools:textColorHint="#1E1A1A" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="43dp"

        android:layout_weight="1"
        android:background="@drawable/re"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.232" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:background="@drawable/r"
        android:baselineAligned="false"
        android:hint="@string/resgistrar_name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="#100D0D"
        android:textColorHighlight="#150101"
        android:textColorHint="#171212"
        android:textColorLink="#100F0F"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        tools:textColorHint="#191616" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        android:background="@drawable/imgbut"
        android:src="@drawable/miccc"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        android:background="@drawable/imgbut"
        android:src="@drawable/camm"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="10dp"
        android:text="Gender :"
        android:textColor="#2C2525"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        app:layout_constraintEnd_toStartOf="@+id/radioButton12"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crime Info"
        android:textColor="#FF1F1F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <RadioButton
        android:id="@+id/radioButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/purple_500"
        android:text="@string/male"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        app:layout_constraintEnd_toStartOf="@+id/radioButton13" />

    <RadioButton
        android:id="@+id/radioButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_500"
        android:text="Female"
        android:textColor="#1E1919"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />


</androidx.constraintlayout.widget.ConstraintLayout>